--- a/css/_header.scss
+++ b/css/_header.scss
@@ -9,6 +9,7 @@ header {
         display: flex;
 		justify-content: space-between;
 		max-width:1140px;
+		align-items: center;
 	}
 }
 
@@ -17,7 +18,7 @@ header {
 }
 
 nav {
-	margin:2rem 0 0;
+	margin:0;
 	padding:2px 0 0;
 
 	a {
