--- a/css/_type.scss
+++ b/css/_type.scss
@@ -54,9 +54,6 @@ small {
 	font-size: 1.6rem;
 	line-height:4rem;
 }
-ul {
-	@extend %extend_2;
-}
 strong {
 	@extend %extend_2;
 	font-weight: 600;
@@ -66,7 +63,7 @@ strong {
 }
 
 ul {
-	padding-top:2rem;
+	padding:2.4rem 0;
 }
 
 ul li {
