--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -35,7 +35,7 @@ section {
 	.title {
 		text-align: center;
 		margin:0 auto 0;
-		padding:5.6rem 0 5.6em;
+		padding:2.4rem 0 5.6em;
 		display:block;
 		p {
 			font-size:1.8rem;
@@ -46,66 +46,7 @@ img.logo {
 	width:75px;
 	height: auto;
 }
-//Splash Pag/
-#home {
-	max-width: 100%;
-	background: $url_0 no-repeat center center $color_splash_page;
-	background-size: cover;
-	position: relative;
-	height: 100vh;
-	margin:0;
-	padding-top: 0;
 
-	&.apt {
-		background: linear-gradient(rgba(0,0,0,.5), rgba(29, 13, 119, 0.5)), $url_apt no-repeat center center ;
-	}
-
-	article {
-		width:700px;
-		margin:12% auto 0;
-		text-align: center;
-	.btn-anchor {
-		display:block;
-		padding:6rem 0 0;
-		span {
-			display:block;
-			font-size:1.4rem;
-			color:$color-aqua;
-		}
-	img{
-		height:56px;
-		width: 44px;
-		margin:1rem;
-		-webkit-animation: pulse 2s infinite;
-    	animation: pulse 2s infinite;
-	}
- }
- }
-	ul {
-		text-align: center;
-		padding: 12px;
-		li {
-			display: inline-block;
-			padding: 0 14px;
-			font-size: 1.6rem;
-			font-weight: 300;
-			color: $color_link;
-		}
-	}
-	h1 {
-		color: $white;
-		text-align: center;
-
-	}
-	p {
-		color:$color_aqua;
-		padding:1rem;
-	}
-		
-	.button {
-		margin:10% auto 0;
-	}
-}
 
 .icons {
 	display:flex;
@@ -121,64 +62,46 @@ img.logo {
 /* Biography intro */
 
 .bio {
-	display:flex;
-	h3 {
-		font-size: 3.6rem;
-	}
+	padding:3.2rem;
 }
 
 .btn {
-	background:#02ADF0;
-	color: #fff;
-	border: 1px solid $color_venice_blue;
+	color:$color_link;
+	border: 2px solid $color_link;
 	text-align: center;
 	padding: 1rem 4.2rem;
 	font-size:1.4rem;
 	text-transform: uppercase;
 	font-weight: 400;
-	border-radius:20px;
+	&:hover {
+		background:$color_link;
+		color:white;
+	}
 	}
 
 //About Section
 
-#interior {
-	margin:0;
-	padding:0;
-	background: #0080C9;
-	max-width: 100%;
-}
-
 #about {
 	margin-bottom:4rem;
-	article {
-		display: grid;
-		grid-template-columns: repeat(2, 50%);
-		grid-template-rows: repeat(2, 1fr);
-		grid-row-gap: 12rem;
-		grid-column-gap: 0;
-		grid-template-rows: auto auto;
+	max-width:1400px;
+
+	.flex {
+		display:flex;
 		img {
 			justify-self: end;
-			width:100%;
+			max-width:400px;
 			height:auto;
-			
 		}
 	}
 
-	.button {
-		box-shadow: 10px 10px 24px #e4e4e4;
-	}
-	h5 {
-		font-size: 2.5rem;
-		padding: 0;
-		color: $black;
-		display: inline;
-	}
-	strong {
-		padding: 12px 0;
-		display: block;
-		color: $color_nobel;
-		font-weight: 300;
+}
+
+.social-media {
+	margin:3.6em 0;
+	.fab {
+		font-size:2.4rem;
+		color:$color_link;
+		padding:0 2.4rem 0 0;
 	}
 }
 
@@ -210,10 +133,9 @@ img.logo {
 			padding: .8rem 0 0;
 		}
 		 img {
-			opacity: 90%;
 			height: auto;
 			width: 100%;
-			border-radius:6px;
+			box-shadow: #d4d4d4 0 0 4px;
 			&:hover {
 				opacity:100%;
 				@include ease;
@@ -335,103 +257,4 @@ img.logo {
 		}
 	}
 }
-
-//Contact Pages
-
-#contact {
-	margin-bottom: 0;
-	.bio {
-	display:flex;
-	margin:0 0 3rem;
-	background: #fff;
-    border-radius: 6px;
-    box-shadow: 0 0 8px #e4e3e3;
-	justify-content: space-between;
-	align-items: center;
-	p {
-		padding:0;
-	}
-		.label {
-		flex:0 0 15%;
-		text-align:right;
-		}
-		.copy {
-			padding:1.4rem;
-			flex:0 0 25%;
-		}
-	}
-	.soc-icons {
-		margin:0 auto 62px;
-		display: flex;
-		width:470px;
-		justify-content: space-between;
-		i {
-			color: $color_logo-bg;
-			font-size:2.4rem;
-			border: 1px solid $color_venice_blue;
-			border-radius: 50%;
-			border-radius: 50%;
-			padding: 18px;
-			width: 62px;
-			height: 62px;
-		text-align: center;
-		}
-
-	}
-
-
-		.btn {
-			display: block;
-			background:#02ADF0;
-			color: #fff;
-			border: 1px solid $color_venice_blue;
-			text-align: center;
-			padding: 1rem 4.2rem;
-			font-size:1.4rem;
-			width:280px;
-			text-transform: uppercase;
-			font-weight: 400;
-			border-radius:6px;
-			margin: 0 auto;
-			&:hover {
-				background:$color_navy;
-			}
-			i {
-				padding:0 .5rem;
-				color: $color_logo-bg;
-			}
-		}
-
-	}
 	
-//Keyframes for Anchor
-
-@-webkit-keyframes pulse {
-	0% {
-	  -webkit-transform: translate(0, 0);
-			  transform: translate(0, 0); }
-	50% {
-	  -webkit-transform: translate(0, 10px);
-			  transform: translate(0, 10px); }
-	100% {
-	  -webkit-transform: translate(0, 0);
-			  transform: translate(0, 0); } 
-			}
-  
-  @keyframes pulse {
-	0% {
-	  -webkit-transform: translate(0, 0);
-			  transform: translate(0, 0); }
-	50% {
-	  -webkit-transform: translate(0, 10px);
-			  transform: translate(0, 10px); }
-	100% {
-	  -webkit-transform: translate(0, 0);
-			  transform: translate(0, 0); }
-			 } //Global pieces
-.tools {
-	display:flex;
-	.item {
-		padding:0 12px 0 0;
-	}
-}
