--- a/css/_type.scss
+++ b/css/_type.scss
@@ -12,7 +12,7 @@ h2 {
 }
 h3 {
 	@extend %extend_1;
-	font-size: 2.4rem;
+	font-size: 3.2rem;
 }
 h4 {
 	@extend %extend_1;
@@ -26,7 +26,7 @@ h5 {
 p {
 	font-weight: 400;
 	@extend %extend_2;
-	padding:2.4rem 0;
+	padding:0 0 2.4rem;
 	line-height: 3.2rem;
 	font-size: 1.6rem;
 }
@@ -35,17 +35,6 @@ a {
 	@extend %extend_2;
 	text-decoration: none;
     color: $color_link;
-    @include btn_fade;
-    &:hover {
-        color: $white;
-	}
-}
-em {
-	font-weight: 300;
-	@extend %extend_2;
-	color: $color_olivine;
-	font-style: normal;
-	font-size: 1.6rem;
 }
 small {
 	@extend %extend_2;
