--- a/css/global.css
+++ b/css/global.css
@@ -41,14 +41,15 @@ table {
 h1, h2, h3, h4, h5 {
   font-family: "Fira Sans", sans-serif;
   margin: 0;
-  padding: 0;
+  padding: 0 0 1.6rem;
   color: #141313;
   display: block;
   letter-spacing: -.05rem;
+  font-weight: 400;
 }
 
-p, a, em, small, strong, ul li, form input, form textarea, form label {
-  font-family: OpenSans, sans-serif;
+p, a, small, strong, ul li, form input, form textarea, form label {
+  font-family: "Fira Sans", sans-serif;
   margin: 0;
   padding: 0;
   color: #585858;
@@ -90,7 +91,7 @@ body {
 
 section {
   margin: 0 auto 0;
-  padding: 5.6rem;
+  padding: 5.6rem 5vw;
   position: relative;
 }
 
@@ -143,7 +144,7 @@ h2 {
 }
 
 h3 {
-  font-size: 2.4rem;
+  font-size: 3.2rem;
 }
 
 h4 {
@@ -157,7 +158,7 @@ h5 {
 
 p {
   font-weight: 400;
-  padding: 2.4rem 0;
+  padding: 0 0 2.4rem;
   line-height: 3.2rem;
   font-size: 1.6rem;
 }
@@ -165,21 +166,7 @@ p {
 a {
   font-weight: 400;
   text-decoration: none;
-  color: #1293e4;
-  -webkit-transition: all .9s ease;
-  transition: all .9s ease;
-  -webkit-transition: all .5s ease;
-}
-
-a:hover {
-  color: #fff;
-}
-
-em {
-  font-weight: 300;
-  color: #2588b9;
-  font-style: normal;
-  font-size: 1.6rem;
+  color: #0890F2;
 }
 
 small {
@@ -212,6 +199,10 @@ form input, form textarea, form label {
   font-size: 1.6rem;
 }
 
+header {
+  margin: 0 5vw;
+}
+
 header strong {
   color: #fff;
 }
@@ -224,7 +215,7 @@ header .inner {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  max-width: 1140px;
+  max-width: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -241,11 +232,11 @@ nav {
 
 nav a {
   padding: 1.6rem;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 1.4rem;
   line-height: 1.6em;
   margin-left: 3.2rem;
-  color: #c0d4e6;
+  color: #0890F2;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -258,21 +249,17 @@ nav a {
           align-items: center;
 }
 
-nav a.selected {
-  color: #fff;
+nav a.active {
+  font-weight: 600;
+  color: #585858;
+}
+
+nav a.active span {
+  border-bottom: 1px solid #0890F2;
 }
 
 nav a img {
   margin-bottom: .7rem;
-}
-
-nav:hover {
-  color: #fff;
-}
-
-nav i {
-  padding-right: 4px;
-  color: #9FDAF2;
 }
 
 .tools {
@@ -324,7 +311,7 @@ section aside {
 section .title {
   text-align: center;
   margin: 0 auto 0;
-  padding: 5.6rem 0 5.6em;
+  padding: 2.4rem 0 5.6em;
   display: block;
 }
 
@@ -335,73 +322,6 @@ section .title p {
 img.logo {
   width: 75px;
   height: auto;
-}
-
-#home {
-  max-width: 100%;
-  background: url(img/bg-home.png) no-repeat center center #00519f;
-  background-size: cover;
-  position: relative;
-  height: 100vh;
-  margin: 0;
-  padding-top: 0;
-}
-
-#home.apt {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(29, 13, 119, 0.5))), url(/images/hero-images/hero-apt.jpg) no-repeat center center;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(29, 13, 119, 0.5)), url(/images/hero-images/hero-apt.jpg) no-repeat center center;
-}
-
-#home article {
-  width: 700px;
-  margin: 12% auto 0;
-  text-align: center;
-}
-
-#home article .btn-anchor {
-  display: block;
-  padding: 6rem 0 0;
-}
-
-#home article .btn-anchor span {
-  display: block;
-  font-size: 1.4rem;
-  color: #9FDAF2;
-}
-
-#home article .btn-anchor img {
-  height: 56px;
-  width: 44px;
-  margin: 1rem;
-  -webkit-animation: pulse 2s infinite;
-  animation: pulse 2s infinite;
-}
-
-#home ul {
-  text-align: center;
-  padding: 12px;
-}
-
-#home ul li {
-  display: inline-block;
-  padding: 0 14px;
-  font-size: 1.6rem;
-  font-weight: 300;
-  color: #1293e4;
-}
-
-#home h1 {
-  color: #fff;
-  text-align: center;
-}
-
-#home p {
-  color: #9FDAF2;
-  padding: 1rem;
-}
-
-#home .button {
-  margin: 10% auto 0;
 }
 
 .icons {
@@ -421,75 +341,50 @@ img.logo {
 
 /* Biography intro */
 .bio {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.bio h3 {
-  font-size: 3.6rem;
+  padding: 3.2rem;
 }
 
 .btn {
-  background: #02ADF0;
-  color: #fff;
-  border: 1px solid #1293e4;
+  color: #0890F2;
+  border: 2px solid #0890F2;
   text-align: center;
   padding: 1rem 4.2rem;
   font-size: 1.4rem;
   text-transform: uppercase;
   font-weight: 400;
-  border-radius: 20px;
 }
 
-#interior {
-  margin: 0;
-  padding: 0;
-  background: #0080C9;
-  max-width: 100%;
+.btn:hover {
+  background: #0890F2;
+  color: white;
 }
 
 #about {
   margin-bottom: 4rem;
+  max-width: 1400px;
 }
 
-#about article {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (50%)[2];
-      grid-template-columns: repeat(2, 50%);
-  -ms-grid-rows: (1fr)[2];
-      grid-template-rows: repeat(2, 1fr);
-  grid-row-gap: 12rem;
-  grid-column-gap: 0;
-  -ms-grid-rows: auto auto;
-      grid-template-rows: auto auto;
+#about .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-#about article img {
+#about .flex img {
   -ms-grid-column-align: end;
       justify-self: end;
-  width: 100%;
+  max-width: 400px;
   height: auto;
 }
 
-#about .button {
-  -webkit-box-shadow: 10px 10px 24px #e4e4e4;
-          box-shadow: 10px 10px 24px #e4e4e4;
+.social-media {
+  margin: 3.6em 0;
 }
 
-#about h5 {
-  font-size: 2.5rem;
-  padding: 0;
-  color: #000000;
-  display: inline;
-}
-
-#about strong {
-  padding: 12px 0;
-  display: block;
-  color: #8a8888;
-  font-weight: 300;
+.social-media .fab {
+  font-size: 2.4rem;
+  color: #0890F2;
+  padding: 0 2.4rem 0 0;
 }
 
 #portfolio {
@@ -528,10 +423,10 @@ img.logo {
 }
 
 .grid img {
-  opacity: 90%;
   height: auto;
   width: 100%;
-  border-radius: 6px;
+  -webkit-box-shadow: #d4d4d4 0 0 4px;
+          box-shadow: #d4d4d4 0 0 4px;
 }
 
 .grid img:hover {
@@ -668,7 +563,7 @@ img.logo {
 }
 
 .pager i {
-  color: #1293e4;
+  color: #0890F2;
 }
 
 #mobile {
@@ -688,132 +583,6 @@ img.logo {
   height: auto;
   -webkit-box-shadow: 0 0 44px #99bcce;
           box-shadow: 0 0 44px #99bcce;
-}
-
-#contact {
-  margin-bottom: 0;
-}
-
-#contact .bio {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0 0 3rem;
-  background: #fff;
-  border-radius: 6px;
-  -webkit-box-shadow: 0 0 8px #e4e3e3;
-          box-shadow: 0 0 8px #e4e3e3;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#contact .bio p {
-  padding: 0;
-}
-
-#contact .bio .label {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 15%;
-          flex: 0 0 15%;
-  text-align: right;
-}
-
-#contact .bio .copy {
-  padding: 1.4rem;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 25%;
-          flex: 0 0 25%;
-}
-
-#contact .soc-icons {
-  margin: 0 auto 62px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 470px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-#contact .soc-icons i {
-  color: #0f6590;
-  font-size: 2.4rem;
-  border: 1px solid #1293e4;
-  border-radius: 50%;
-  border-radius: 50%;
-  padding: 18px;
-  width: 62px;
-  height: 62px;
-  text-align: center;
-}
-
-#contact .btn {
-  display: block;
-  background: #02ADF0;
-  color: #fff;
-  border: 1px solid #1293e4;
-  text-align: center;
-  padding: 1rem 4.2rem;
-  font-size: 1.4rem;
-  width: 280px;
-  text-transform: uppercase;
-  font-weight: 400;
-  border-radius: 6px;
-  margin: 0 auto;
-}
-
-#contact .btn:hover {
-  background: #012f5a;
-}
-
-#contact .btn i {
-  padding: 0 .5rem;
-  color: #0f6590;
-}
-
-@-webkit-keyframes pulse {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(0, 10px);
-    transform: translate(0, 10px);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes pulse {
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-  50% {
-    -webkit-transform: translate(0, 10px);
-    transform: translate(0, 10px);
-  }
-  100% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-}
-
-.tools {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.tools .item {
-  padding: 0 12px 0 0;
 }
 
 footer {
@@ -840,14 +609,13 @@ footer h3 {
 }
 
 footer strong {
-  color: #c0d4e6;
   font-size: 1.8rem;
   padding: 0 0 6px;
   display: block;
 }
 
 footer .inner {
-  max-width: 1140px;
+  max-width: 1400px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -870,7 +638,7 @@ footer .inner .social-media {
 }
 
 footer .inner i {
-  color: #1293e4;
+  color: #0890F2;
   font-size: 2.4rem;
   padding: 0 2.4rem;
 }
@@ -885,14 +653,14 @@ footer .inner a {
   display: inline;
   padding: 0 2rem 0 0;
   font-size: 1.4rem;
-  color: #1293e4;
+  color: #0890F2;
   line-height: 1;
 }
 
 footer .inner p {
   display: inline;
   font-size: 1.4rem;
-  color: #1293e4;
+  color: #0890F2;
   line-height: 1;
 }
 
@@ -922,14 +690,6 @@ footer .button {
           box-shadow: 5px 5px 30px #0490d8;
 }
 
-footer .button:hover {
-  background: #1293e4;
-}
-
-footer span a {
-  color: #2588b9;
-}
-
 footer i {
   padding-right: 4px;
 }
@@ -941,7 +701,7 @@ footer .bioInfo {
 
 footer .bioInfo p {
   font-size: 1.4rem;
-  color: #1293e4;
+  color: #0890F2;
 }
 
 footer .bioInfo .logo {
@@ -958,7 +718,6 @@ footer .bioInfo img {
 }
 
 .logoBrand {
-  border-top: 1px solid #1293e4;
   margin: 54px 0;
   width: 100%;
   position: relative;
@@ -1246,7 +1005,7 @@ footer .bioInfo img {
     font-size: 12px;
     text-align: center;
     z-index: 5;
-    color: #1293e4;
+    color: #0890F2;
     font-weight: 400;
   }
   #mobileNav a.active {
@@ -1271,7 +1030,6 @@ footer .bioInfo img {
     position: absolute;
     right: 24px;
     top: 12px;
-    color: #c0d4e6;
     font-size: 2.8rem;
     opacity: .5;
   }
