--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -43,6 +43,11 @@
 /* Mobile Display */
 
 @media (min-width: 768px) {
+    header {
+        margin:0 5vw;
+
+    }
+    
     footer {
        .inner {
             display: flex;
@@ -63,6 +68,39 @@
             text-align: center;
 
         }
+        .topnav {
+            a{
+                display:none;
+            }
+        a.icon {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            display: block;
+            font-size:24px;
+          }
+
+        &.responsive {
+            a {
+          float: none;
+          display: block;
+          border:none;
+
+        }
+        .wrapper {
+            background: $color_light_grey;
+            width:100%;
+            height:100vh;
+            z-index: 2;
+            padding-top: 15vh;
+            a {
+                          padding: 16px 0 0;
+          font-size:18px;
+            }
+        }
+    }
+    }
+
         #content {
             padding:0rem;
             .bio {
@@ -91,8 +129,11 @@
         section {
             padding:1.225em;
             height:auto;
-            margin: 4.2rem 0 ;
+            margin: 2rem 0 ;
             padding:0;
+            h1 {
+                font-size:3rem;
+            }
             article {
                 padding:0 2rem;
                 max-width: 100%;
@@ -183,6 +224,12 @@
                 padding:0 2.4rem;
             }
         }
+
+        #work {
+            .container {
+                padding:0 2rem;
+            }
+        }
    
         #portfolio {
             background: none;
@@ -219,80 +266,12 @@
             max-width: $size_100;
         }
 
-        #contact {
 
-            .octopus {
-                /* right: -1000px; */
-                top: 200px;
-                width: 700px;
-                height: auto;
-            }
-            .angler {
-                width: 120px;
-            }
-            background-position: 0 50px;
-            background-size:120px;
-            .button {
-                display:block;
-                margin:2em auto; 
-                width: 100%;           
-            }
-            form {width:auto;
-                margin:0 1.8rem;
-                span {
-                    margin:1rem 0;
-                }
-              .flex-input {
-                  display:block;
-              }
-              input {
-                width:100%;
-              }
-              textarea {
-                  width:100%;
-              }
-            }      
-        }
-        #mobileNav {
-            display: flex;
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: $size_100;
-            opacity: 1;
-            z-index: 2;
-            a {
-                width: 25%;
-                display: table-cell;
-                background-color: $color_nav_mobi;
-                padding: 8px;
-                border-bottom: 1px solid $color_cape_cod;
-                font-size: 12px;
-                text-align: center;
-                z-index: 5;
-                color: $color_link;
-                font-weight: 400;
-                &.active {
-                    color: $white;
-                }
-                img {
-                    height:28px;
-                    width:auto;
-                    padding-bottom: 4px;
-                }
-                span {
-                    display: block;
-                }
-            }
-        }
         .page .scrnshts, .page .screens {
             display:block;
         }
 
-    
-        nav {
-            display: none;
-        }
+
         .menu {
             display: block;
             position: absolute;
@@ -317,23 +296,24 @@
             .social {
                 padding: 0 0 2em;
             }
-            .inner {
-                margin: 0 1.4rem 1.4rem;
-                text-align: center;
-                display:block;
-                p,a {
-                    display:block;
+                .inner {
+                    margin: 0 1.4rem 1.4rem;
+                    text-align: center;
+                    flex-direction: column;
+                    justify-content: center;
                     padding:0 0 1.4rem;
-                }
-                .social-media {
-                    padding:0 0 2.4rem;
-                }
-                .logo {
-                    margin:0;
-                    padding:0 0 2.4rem;;
-                    display:block;
-                }
-            }
+                    .social-media {
+                        padding:0 0 2.4rem;
+                    }
+                    .logo {
+                        margin:0;
+                        padding:0 0 2.4rem;;
+                    }
+                    .contact-info {
+                        flex-direction: column;
+                    }
+                    }
+            
             .btn {
                 margin: 20px auto;
             }
@@ -365,7 +345,7 @@
         }
 
     } 
-}
+
 //Portfolio Section
 
 
@@ -382,15 +362,4 @@
 
         }
             }
-
-
-
-
-
-
-
-
-
-
-    
-    
+        }
