--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -91,8 +91,8 @@ img.logo {
 		display:flex;
 		img {
 			justify-self: end;
-			max-width:auto;
-			height:508px;
+			width:auto;
+			max-height:508px;
 		}
 	}
 
