--- a/css/_type.scss
+++ b/css/_type.scss
@@ -1,46 +1,38 @@
 //Fonts
 h1 {
 	@extend %extend_1;
-	font-size: 4rem;
+	font-size: 3rem;
+	span {
+		color:$color_link;
+	}
 }
 h2 {
 	@extend %extend_1;
-	font-size: 3.6rem;
+	font-size: 2.5rem;
 	line-height: 1em;
 	padding:0 0 .4em;
 }
 h3 {
 	@extend %extend_1;
-	font-size: 3.2rem;
+	font-size: 2rem;
 }
 h4 {
 	@extend %extend_1;
-	font-size: 2.4rem;
-}
-h5 {
-	@extend %extend_1;
-	font-size: 1.2rem;
-	padding: 0 0 14px 0;
+	font-size: 1.75rem;
 }
 p {
 	font-weight: 400;
 	@extend %extend_2;
-	padding:0 0 2.4rem;
-	line-height: 3.2rem;
-	font-size: 1.6rem;
+	padding:0 0 1.5rem;
+	line-height: 2rem;
+	font-size: 1rem;
 }
 a {
 	font-weight: 400;
 	@extend %extend_2;
 	text-decoration: none;
     color: $color_link;
-}
-small {
-	@extend %extend_2;
-	color: $color_small;
-	font-weight: 700;
-	font-size: 1.6rem;
-	line-height:4rem;
+	font-size: 1rem;
 }
 strong {
 	@extend %extend_2;
@@ -48,26 +40,4 @@ strong {
 	padding:0;
 	font-size:2rem;
 }
-
-ul {
-	padding:2.4rem 0;
-}
-
-ul li {
-	font-weight: 400;
-	@extend %extend_2;
-	padding: 1rem 0;
-	line-height: 2rem;
-	font-size: 1.6rem;
-}
-
-form {
-	input, textarea, label {
-		@extend %extend_2;
-		padding:0 0 1rem;
-		font-size: 1.6rem;
-	}
-}
-
-
 
