--- a/css/global.css
+++ b/css/global.css
@@ -196,9 +196,8 @@ header .inner {
 }
 
 .topnav a {
-  padding: 1.6rem;
+  padding: 1rem;
   line-height: 1.6em;
-  margin-left: 3.2rem;
   color: #0890F2;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -638,7 +637,7 @@ footer .inner .social-media {
 }
 
 footer .inner .social-media i {
-  font-size: 2.4rem;
+  font-size: 1.5rem;
 }
 
 footer .inner nav {
@@ -750,6 +749,12 @@ footer .logoBrand .logo {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  footer .inner a {
+    padding: 0 1rem;
+  }
+  footer .inner .social-media {
+    margin: 0 3vw 0 0;
   }
 }
 
