--- a/css/_base.scss
+++ b/css/_base.scss
@@ -104,8 +104,24 @@ article {
 	padding:0;
 	margin:0 auto 0;
 	max-width: 1140px;
+	&.container {
+		display:flex;
+		padding: 6rem 0;
+		img {
+			width:50%;
+		}
 		
 	}
+figure {
+	padding:0;
+	margin:0 auto 0;
+	max-width: 1140px;
+	img {
+		width:100%;
+		height:auto;
+	}
+	}
+
 	.fas {
 		color: $white;
 		font-size: 1.8rem;
@@ -133,6 +149,4 @@ article {
 	margin:0;
 	min-height:100%;
 }
-//Animation Left
-
-
+}
