--- a/css/_header.scss
+++ b/css/_header.scss
@@ -18,12 +18,11 @@ header {
 	padding:2px 0 0;
 
 	a {
-		padding: 1rem;
+		padding: .5rem;
 		line-height: 1.6em;
 		color:$color_link;
 		display: inline-flex;
-		flex-direction: column;
-		align-items: center;
+		margin:0 .5rem;
 }
 	.icon {
 		display:none;
