--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -30,7 +30,7 @@
 }
 section {
 	aside {
-		padding:0 2rem;
+		padding:0 2rem 0 0;
 	}
 	.title {
 		text-align: center;
@@ -63,7 +63,6 @@ img.logo {
 }
 
 .btn {
-	color:$color_link;
 	border: 2px solid $color_link;
 	text-align: center;
 	padding: 1rem 4.2rem;
@@ -122,7 +121,6 @@ img.logo {
 			  .text  {
 				  h3 {
 				color: white;
-				font-size: 20px;
 				position: absolute;
 				top: 50%;
 				left: 50%;
@@ -130,8 +128,6 @@ img.logo {
 				-ms-transform: translate(-50%, -50%);
 				transform: translate(-50%, -50%);
 				text-align: center;
-				line-height: 2.8rem;
-				font-size: 2.4rem;
 				  }
 			  }
 		}
@@ -159,7 +155,7 @@ img.logo {
 		 img {
 			height: auto;
 			width: 100%;
-			box-shadow: #d4d4d4 0 0 4px;
+			box-shadow: #d4d4d4 0 0 32px;
 			&:hover {
 				opacity:100%;
 				@include ease;
@@ -188,26 +184,16 @@ img.logo {
 // Portfolio	
 
 #case-study {
-	background:#00519F;
+	background:#eff0f0;
 	padding:0;
+	margin: 1rem 0;
 	.container {
 		display:flex;
 		padding: 6rem 0;
-		h1 {
-			color:#fff;
-		}
-		p {
-			color:#fff;
-		}
 		img {
 			width:50%;
+			box-shadow: 0 0 56px #d6d6d6
 		}
-		aside {
-			padding:0 3.4rem 0 0;
-		}
-	}
-	&.apt {
-		background:url(/images/bg/apt-hero-bg.jpg);
 	}
 	&.esd {
 		background:url(/images/bg/esd-hero-bg.jpg);
@@ -220,24 +206,9 @@ img.logo {
 }
 
 #project {
-	article {
-		display:flex;
-		aside:first-child {
-			flex: 0 0 18%;
-			padding:0;
-			text-align:right;
-		}
-	}
+
 	h3 {
 		padding:2.4rem 0;
-	}
-	i {
-		color: #31ADF8;
-		font-size:1.8rem;
-		display: block;
-		float: left;
-		padding-right: 10px;
-
 	}
 }
 
