--- a/css/_type.scss
+++ b/css/_type.scss
@@ -15,6 +15,7 @@ h2 {
 h3 {
 	@extend %extend_1;
 	font-size: 2rem;
+	line-height:2.5rem;
 }
 h4 {
 	@extend %extend_1;
@@ -41,3 +42,22 @@ strong {
 	font-size:2rem;
 }
 
+small {
+	@extend %extend_1;
+	color:$color_small;
+}
+
+ul {
+    padding: 0;
+    margin: 0 0 1rem;
+li {
+	@extend %extend_1;
+	padding:0;
+	line-height:2rem;
+	.fas{
+		color: $color_small;
+		font-size:1rem;
+		padding-right:.5rem;
+	}
+}
+}
