--- a/css/global.css
+++ b/css/global.css
@@ -38,7 +38,7 @@ table {
   border-spacing: 0;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, small, ul li {
   font-family: "Fira Sans", sans-serif;
   margin: 0;
   padding: 0 0 1.6rem;
@@ -99,7 +99,29 @@ article {
   max-width: 1140px;
 }
 
-.fas {
+article.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 6rem 0;
+}
+
+article.container img {
+  width: 50%;
+}
+
+article figure {
+  padding: 0;
+  margin: 0 auto 0;
+  max-width: 1140px;
+}
+
+article figure img {
+  width: 100%;
+  height: auto;
+}
+
+article .fas {
   color: #fff;
   font-size: 1.8rem;
   padding: 0 0 0 .225em;
@@ -107,24 +129,24 @@ article {
   transition: all .9s ease;
 }
 
-.top {
+article .top {
   position: fixed;
   bottom: 40px;
   left: 40px;
   z-index: 1;
 }
 
-.menu {
+article .menu {
   display: none;
 }
 
-#wrapper {
+article #wrapper {
   width: 100%;
   position: relative;
   height: 100%;
 }
 
-#content {
+article #content {
   padding: 0;
   margin: 0;
   min-height: 100%;
@@ -146,6 +168,7 @@ h2 {
 
 h3 {
   font-size: 2rem;
+  line-height: 2.5rem;
 }
 
 h4 {
@@ -172,6 +195,26 @@ strong {
   font-size: 2rem;
 }
 
+small {
+  color: #007CC8;
+}
+
+ul {
+  padding: 0;
+  margin: 0 0 1rem;
+}
+
+ul li {
+  padding: 0;
+  line-height: 2rem;
+}
+
+ul li .fas {
+  color: #007CC8;
+  font-size: 1rem;
+  padding-right: .5rem;
+}
+
 header strong {
   color: #fff;
 }
@@ -196,19 +239,13 @@ header .inner {
 }
 
 .topnav a {
-  padding: 1rem;
+  padding: .5rem;
   line-height: 1.6em;
   color: #0890F2;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin: 0 .5rem;
 }
 
 .topnav .icon {
@@ -258,7 +295,7 @@ header .inner {
 }
 
 section aside {
-  padding: 0 2rem;
+  padding: 0 2rem 0 0;
 }
 
 section .title {
@@ -294,7 +331,6 @@ img.logo {
 }
 
 .btn {
-  color: #0890F2;
   border: 2px solid #0890F2;
   text-align: center;
   padding: 1rem 4.2rem;
@@ -365,15 +401,12 @@ img.logo {
 
 .grid .container .text h3 {
   color: white;
-  font-size: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
-  line-height: 2.8rem;
-  font-size: 2.4rem;
 }
 
 .grid .overlay {
@@ -403,8 +436,8 @@ img.logo {
 .grid img {
   height: auto;
   width: 100%;
-  -webkit-box-shadow: #d4d4d4 0 0 4px;
-          box-shadow: #d4d4d4 0 0 4px;
+  -webkit-box-shadow: #d4d4d4 0 0 32px;
+          box-shadow: #d4d4d4 0 0 32px;
 }
 
 .grid img:hover {
@@ -439,8 +472,9 @@ img.logo {
 }
 
 #case-study {
-  background: #00519F;
+  background: #eff0f0;
   padding: 0;
+  margin: 1rem 0;
 }
 
 #case-study .container {
@@ -450,24 +484,10 @@ img.logo {
   padding: 6rem 0;
 }
 
-#case-study .container h1 {
-  color: #fff;
-}
-
-#case-study .container p {
-  color: #fff;
-}
-
 #case-study .container img {
   width: 50%;
-}
-
-#case-study .container aside {
-  padding: 0 3.4rem 0 0;
-}
-
-#case-study.apt {
-  background: url(/images/bg/apt-hero-bg.jpg);
+  -webkit-box-shadow: 0 0 56px #d6d6d6;
+          box-shadow: 0 0 56px #d6d6d6;
 }
 
 #case-study.esd {
@@ -479,30 +499,8 @@ img.logo {
   background: linear-gradient(0deg, rgba(44, 44, 44, 0.3), rgba(10, 0, 0, 0.7)), url(/images/bg/lhm-hero-bg.jpg);
 }
 
-#project article {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-#project article aside:first-child {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 18%;
-          flex: 0 0 18%;
-  padding: 0;
-  text-align: right;
-}
-
 #project h3 {
   padding: 2.4rem 0;
-}
-
-#project i {
-  color: #31ADF8;
-  font-size: 1.8rem;
-  display: block;
-  float: left;
-  padding-right: 10px;
 }
 
 #artwork {
@@ -564,8 +562,6 @@ img.logo {
 }
 
 footer {
-  max-width: 100%;
-  padding: 0 0 1rem;
   margin: 4rem 5vw 0;
   height: 70px;
 }
@@ -591,7 +587,6 @@ footer strong {
 }
 
 footer .inner {
-  max-width: 1400px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
